router/apollo-router/tests/snapshots/lifecycle_tests__cli_config_experimental.snap
---
source: apollo-router/tests/lifecycle_tests.rs
expression: "command_output(Command::new(IntegrationTest::router_location()).arg(\"config\").arg(\"experimental\").env(\"RUST_BACKTRACE\",\n            \"\")).await"
---
Success: true
Exit code: Some(0)
stderr:

stdout:
List of all experimental configurations with related GitHub discussions:

	- experimental_batching: https://github.com/apollographql/router/discussions/3840
	- experimental_http_max_request_bytes: https://github.com/apollographql/router/discussions/3220
	- experimental_logging: https://github.com/apollographql/router/discussions/1961
	- experimental_response_trace_id: https://github.com/apollographql/router/discussions/2147
	- experimental_retry: https://github.com/apollographql/router/discussions/2241

