router/apollo-router/tests/snapshots/lifecycle_tests__cli_config_preview.snap
---
source: apollo-router/tests/lifecycle_tests.rs
expression: "command_output(Command::new(IntegrationTest::router_location()).arg(\"config\").arg(\"preview\").env(\"RUST_BACKTRACE\",\n            \"\")).await"
---
Success: true
Exit code: Some(0)
stderr:

stdout:
List of all preview configurations with related GitHub discussions:

	- preview_directives: https://github.com/apollographql/router/discussions/3754

