router/apollo-router/tests/snapshots/lifecycle_tests__graceful_shutdown.snap
---
source: apollo-router/tests/lifecycle_tests.rs
expression: data
---
{
  "data": {
    "topProducts": [
      {
        "name": "Table"
      },
      {
        "name": "Couch"
      },
      {
        "name": "Chair"
      }
    ]
  }
}
